change backgrounds of posts and categories, change text colour where it is needed

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -330,11 +330,11 @@ ul.menuList {
 }
 
 .colorMain {
-    background: #343338;
+    background: #eaf7f8;
 }
 
 .colorSection {
-    background: #CBC9D0;
+    background: white;
 }
 
 .colorDarkLink {
