--- a/views/layouts/postViewLayout.handlebars
+++ b/views/layouts/postViewLayout.handlebars
@@ -11,7 +11,7 @@
 
 <div class="container relative">
     <div id="categories" class="colorMain">
-        <h2 style="border-bottom-style:solid;" class="colorTextLight">Категории</h2>
+        <h2 style="border-bottom-style:solid;" class="colorTextDark">Категории</h2>
         {{>categoriesListPanel}}
     </div>
 
