--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -1,11 +1,9 @@
-
-
-<div class="selectedTheme colorMain" >
+<div class="selectedTheme colorMain">
     <a class="borderTop myButton colorDarkLink colorSection"
        style="float: left; margin-top: 4.4vh" href="{{from}}"><img src="/static/images/back.png" height="40"
                                                                    alt="Назад"></a>
     <h3 class="postTitle colorTextLight">{{post.title}}</h3>
-    <ul id="ulReplies" style="max-height: 54%;" >
+    <ul id="ulReplies" style="max-height: 54%;">
         {{#each replies}}
             <li class="answer colorSection" id="reply_{{this.id}}">
                 <div class="profile">
@@ -44,8 +42,10 @@
                             <input type="image" class="vote" src="/static/images/dislike.png" alt="#"/>
                             </form>
                         {{else}}
-                            <input type="image" class="vote" src="/static/images/like.png" alt="#" onclick="document.getElementById('signUpForm').style.display='block'">
-                            <input type="image" class="vote" src="/static/images/dislike.png" onclick="document.getElementById('signUpForm').style.display='block'">
+                            <input type="image" class="vote" src="/static/images/like.png" alt="#"
+                                   onclick="document.getElementById('signUpForm').style.display='block'">
+                            <input type="image" class="vote" src="/static/images/dislike.png"
+                                   onclick="document.getElementById('signUpForm').style.display='block'">
                         {{/if}}
 
 
@@ -72,7 +72,7 @@
     {{/if}}
 </div>
 {{#if user}}
-{{>replyForm}}
+    {{>replyForm}}
 {{/if}}
 
 
