--- a/views/partials/postsListPanel.handlebars
+++ b/views/partials/postsListPanel.handlebars
@@ -1,7 +1,7 @@
 <div class="selectedTheme colorMain">
     <h2 class="categoryHeader colorTextLight">{{postsListTitle}}</h2>
-    <div class="colorTextLight">
-        {{#if posts}}
+<div class="colorTextLight">
+    {{#if posts}}
         <span><a id='byTime'
             {{#is sortTag 'byTime' }}
                  href="?sortTag=byTimeAsc"
@@ -28,72 +28,75 @@
             {{/is}}
                  class="sortLink">По последнему ответу <span class="sortLinkArrow"
                                                              id="byLastReplySortLink">&nbsp;</span></a></span></div>
-    <ul id="ulPosts" class="noUlDefaultPadding noUlDecor">
-        {{#each posts}}
-            <li class="answer colorSection">
-                <div class="profile">
-                    <img {{#if this.author_name}}
-                    src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png"
-                    {{else}}
-                    src="https://avatars.mds.yandex.net/get-znatoki/1368855/2a0000016cc1fb6175fa439bc6ab108427ae/w480"
-                    {{/if}}
-                    alt="No avatar" height="100" width="100">
-                    {{#eq this.author_id ../user.id}}
-                        <a class="profileName link colorDarkLink"
-                           onclick="editPost({{this.id}}, {{this.category_id}}, '{{this.title}}')">Edit</a>
-                        <a class="profileName link colorDarkLink" onclick="deletePost({{this.id}})">Delete</a>
-                    {{else}}
-                        <div class="profileName link colorDarkLink">
-                            {{#if this.author_name}}
-                                {{this.author_name}}
+        <ul id="ulPosts" class="noUlDefaultPadding noUlDecor">
+            {{#each posts}}
+                <li class="answer colorSection">
+                    <div class="profile">
+                        <img {{#if this.author_name}}
+                        src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png"
+                        {{else}}
+                        src="https://avatars.mds.yandex.net/get-znatoki/1368855/2a0000016cc1fb6175fa439bc6ab108427ae/w480"
+                        {{/if}}
+                        alt="No avatar" height="100" width="100">
+                        {{#eq this.author_id ../user.id}}
+                            <a class="profileName link colorDarkLink"
+                               onclick="editPost({{this.id}}, {{this.category_id}}, '{{this.title}}')">Edit</a>
+                            <a class="profileName link colorDarkLink" onclick="deletePost({{this.id}})">Delete</a>
+                        {{else}}
+                            <div class="profileName link colorDarkLink">
+                                {{#if this.author_name}}
+                                    {{this.author_name}}
+                                {{else}}
+                                    Удален
+                                {{/if}}
+                            </div>
+                        {{/eq}}
+                    </div>
+
+                    <a class="textAndTime link" href="/post/{{this.id}}?from={{../currentPath}}">
+                    <span class="answerText  ColorTextDark">{{this.title}}</span>
+                    <div class="timeLast">
+                        {{this.time_since_creation}}
+                    </div>
+                    </a>
+                    <div class="voteField">
+                        <a href="/post/{{this.id}}?{{../currentPath}}"><input type="image"
+                                                                              class="replyImage vote colorDarkLink myButton colorSection"
+                                                                              src="/static/images/reply.png"
+                                                                              alt="#"/></a>
+                        <div class="voteCounter colorMain colorTextLight">
+                            {{#if this.reply_count}}
+                                {{this.reply_count}}
                             {{else}}
-                                Удален
+                                0
                             {{/if}}
                         </div>
-                    {{/eq}}
-                </div>
-
-                <a class="textAndTime link" href="/post/{{this.id}}?from={{../currentPath}}">
-                <span class="answerText  ColorTextDark">{{this.title}}</span>
-                <div class="timeLast">
-                    {{this.time_since_creation}}
-                </div>
-                </a>
-                <div class="voteField">
-                    <a href="/post/{{this.id}}?{{../currentPath}}"><input type="image"
-                                                                          class="replyImage vote colorDarkLink myButton colorSection"
-                                                                          src="/static/images/reply.png" alt="#"/></a>
-                    <div class="voteCounter colorMain colorTextLight">
-                        {{#if this.reply_count}}
-                            {{this.reply_count}}
-                        {{else}}
-                            0
-                        {{/if}}
                     </div>
-                </div>
-            </li>
-        {{/each}}
-    </ul>
-        {{else}}
-            {{#if category}}
-                <p class="colorTextLight">Нет постов.
-                    {{#if user}}
-                    <a onclick="document.getElementById('postCreation').style.display='block'" href="#">Создайте пост</a>
-                        или
-                        <form action="/category/delete/{{category}}" method="post">
-                            <input type="submit" value="удалите категорию">
-                        </form></p>
-                    {{else}}
-                        <p class="colorTextLight">Войдите или зарегистрируйтесь, чтобы создать пост</p>
-            {{/if}}
+                </li>
+            {{/each}}
+        </ul>
+    {{else}}
+        {{#if category}}
+        <p class="colorTextLight">Нет постов.
+            {{#if user}}
+                <a onclick="document.getElementById('postCreation').style.display='block'" href="#">Создайте пост</a>
+                или
+                <form action="/category/delete/{{category}}" method="post">
+                    <input type="submit" value="удалите категорию">
+                </form>
+                </p>
             {{else}}
-                <p class="colorTextLight">Нет постов
-                    {{#if user}}
-                        <a onclick="document.getElementById('postCreation').style.display='block'" href="#">Создайте пост</a></p>
-                    {{else}}
-                        <p class="colorTextLight">Войдите или зарегистрируйтесь, чтобы создать пост</p>
-                    {{/if}}
+                <p class="colorTextLight">Войдите или зарегистрируйтесь, чтобы создать пост</p>
             {{/if}}
+        {{else}}
+        <p class="colorTextLight">Нет постов
+            {{#if user}}
+                <a onclick="document.getElementById('postCreation').style.display='block'" href="#">Создайте пост</a>
+            </p>
+            {{else}}
+                <p class="colorTextLight">Войдите или зарегистрируйтесь, чтобы создать пост</p>
+            {{/if}}
+        {{/if}}
     {{/if}}
 
     {{#if user}}
