login and signup files content was swapped

--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -14,9 +14,9 @@
     {{else}}
         <div id="headerProfileBlock" class='right relative'>
             <a id="signUpButton" class="headerText colorMedium linkTextNoDecor hoverColorAccent"
-               onclick="document.getElementById('logInForm').style.display='block'">Регистрация</a>
+               onclick="document.getElementById('signUpForm').style.display='block'">Регистрация</a>
             <a id=" logInButton" class="headerText colorMedium linkTextNoDecor hoverColorAccent"
-               onclick="document.getElementById('signUpForm').style.display='block'">Войти</a>
+               onclick="document.getElementById('logInForm').style.display='block'">Войти</a>
         </div>
     {{/if}}
 </header>
