--- a/views/partials/popups/loginPanel.handlebars
+++ b/views/partials/popups/loginPanel.handlebars
@@ -1,11 +1,9 @@
 <div id="logInForm" class="window">
-    <form class="windowContent colorMain" method="post" action="/signup">
+    <form class="windowContent colorMain" method="post" action="/login">
         <div style="margin-bottom: 1%; margin-top: 1%" class="colorTextLight">Your account</div>
         <input style="margin-top: 5%; font-size: 14pt" type="text" placeholder="Login" name="login" required>
         <input style="margin-top: 5%; font-size: 14pt" type="password" placeholder="Enter password" name="psw" required>
-        <input style="margin-top: 5%; font-size: 14pt" type="password" placeholder="Confirm password" name="pswConf"
-               required>
-        <button type="submit" class="close colorDarkLink colorBackground">Sign up</button>
-        <div id="signUpError" class="colorTextLight"></div>
+        <button type="submit" class="close colorDarkLink colorBackground">Log in</button>
+        <div id="logInError" class="colorTextLight"></div>
     </form>
 </div>
