--- a/views/partials/popups/signupPanel.handlebars
+++ b/views/partials/popups/signupPanel.handlebars
@@ -1,9 +1,12 @@
 <div id="signUpForm" class="window">
-    <form class="windowContent colorMain" method="post" action="/login">
+    <form class="windowContent colorMain" method="post" action="/signup">
         <div style="margin-bottom: 1%; margin-top: 1%" class="colorTextLight">Your account</div>
         <input style="margin-top: 5%; font-size: 14pt" type="text" placeholder="Login" name="login" required>
         <input style="margin-top: 5%; font-size: 14pt" type="password" placeholder="Enter password" name="psw" required>
-        <button type="submit" class="close colorDarkLink colorBackground">Log in</button>
-        <div id="logInError" class="colorTextLight"></div>
+        <input style="margin-top: 5%; font-size: 14pt" type="password" placeholder="Confirm password" name="pswConf"
+               required>
+        <button type="submit" class="close colorDarkLink colorBackground">Sign up</button>
+        <div id="signUpError" class="colorTextLight"></div>
     </form>
 </div>
+
