--- a/views/layouts/postsListViewLayout.handlebars
+++ b/views/layouts/postsListViewLayout.handlebars
@@ -1,9 +1,10 @@
-{{#not user}}
+<div id="popUpContainer" class="hidden" onclick="hidePopups()">{{#not user}}
     {{>loginPanel}}
     {{>signupPanel}}
 {{else}}
     {{>postCreationPanel}}
 {{/not}}
+</div>
 {{>head}}
 {{>topbar}}
 {{>message}}
