--- a/views/partials/popups/signupPanel.handlebars
+++ b/views/partials/popups/signupPanel.handlebars
@@ -1,4 +1,4 @@
-<div id="signUpForm" class="window">
+<div id="signUpForm" class="window hidden">
     <form class="windowContent colorMain" method="post" action="/signup">
         <div style="margin-bottom: 1%; margin-top: 1%" class="colorTextLight">Your account</div>
         <input style="margin-top: 5%; font-size: 14pt" type="text" placeholder="Login" name="login" required>
