all existing popups transfered to new logic

--- a/views/partials/popups/editPostPanel.handlebars
+++ b/views/partials/popups/editPostPanel.handlebars
@@ -1,4 +1,4 @@
-<div id="postChange" class="window hidden">
+<div id="editPostPopup" class="window popup hidden">
     <form id="sendEdition" class="postCreationBox colorMain">
         <div class="colorTextLight">Edit post</div>
         <textarea name="edition" id="editPost" required></textarea>
