--- a/views/partials/popups/editReplyPanel.handlebars
+++ b/views/partials/popups/editReplyPanel.handlebars
@@ -1,4 +1,4 @@
-<div id="replyChange" class="window">
+<div id="editReplyPopup" class="window popup hidden">
     <form id="sendReply" class="postCreationBox colorMain">
         <div class="colorTextLight">Edit post</div>
         <textarea name="replyEdition" id="editReply" required></textarea>
