--- a/views/layouts/postsListViewLayout.handlebars
+++ b/views/layouts/postsListViewLayout.handlebars
@@ -2,13 +2,13 @@
     {{>loginPanel}}
     {{>signupPanel}}
 {{else}}
-    {{>postCreationPanel}}
+    {{>createPostPanel}}
+    {{>editPostPanel}}
 {{/not}}
 </div>
 {{>head}}
 {{>topbar}}
 {{>message}}
-{{>editPostPanel}}
 
 <div class="container relative" style="">
     <div id="categories" class="colorMain">
