--- a/views/partials/popups/createPostPanel.handlebars
+++ b/views/partials/popups/createPostPanel.handlebars
@@ -1,4 +1,4 @@
-<div id="postCreation" class="window">
+<div id="createPostPopup" class="popup hidden">
     <form class="postCreationBox colorMain" method="post" action="/category/create">
         <div style="display: flex; flex-direction: column; justify-content: center;">
             <div class="colorTextLight">Category</div>
