--- a/views/partials/popups/editReplyPanel.handlebars
+++ b/views/partials/popups/editReplyPanel.handlebars
@@ -1,6 +1,6 @@
-<div id="editReplyPopup" class="window popup hidden">
-    <form id="sendReply" class="postCreationBox colorMain">
-        <div class="colorTextLight">Edit post</div>
+<div id="editReplyPopup" class="popup hidden">
+    <header><h3>Edit post</h3></header>
+    <form id="sendReply" class="popupBody colorMain">
         <textarea name="replyEdition" id="editReply" required></textarea>
         <input type="submit" class="borderTop myButton colorDarkLink colorSection" type="image"
                src="/static/images/send.png">
