--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -276,12 +276,13 @@ ul.menuList {
     left: 0;
     width: 100vw;
     height: 100vh;
-    text-align: center;
     z-index: 2;
     background: rgba(0, 0, 0, 0.5);
 }
 
 .popup {
+    margin: 20% auto;
+    width: min-content;
 }
 
 .popup > header {
@@ -290,8 +291,9 @@ ul.menuList {
 }
 
 .popup > .popupBody {
-    padding: 20px 20px 10px 20px;
+    padding: 20px 30px 15px 20px;
 }
+
 
 /* ОСТАЛЬНОЕ */
 /* ________ */
@@ -379,10 +381,16 @@ ul.menuList {
 }
 
 #loginPopup {
-    margin: 10% auto;
     width: 300px;
 }
 
+#editPostPopup {
+    width: 400px;
+}
+
+#editPostPopup .textInput {
+    width: 80%;
+}
 .ulCategories {
     max-height: 70vh;
     overflow-y: auto;
@@ -540,14 +548,6 @@ ul.menuList {
     width: 5%;
 }
 
-.editDeleteField {
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    text-align: center;
-    width: 8%;
-}
-
 .vote {
     width: 75%;
 }
@@ -671,30 +671,6 @@ ul.menuList {
 
     right: 0;
     bottom: 0;
-}
-
-.window {
-    background: rgba(87, 78, 63, 0.5);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 100;
-}
-
-.windowContent {
-    max-width: 15%;
-    max-height: 25%;
-    text-align: center;
-    padding: 1% 1% 1% 1%;
-    border-radius: 1vh;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
 }
 
 .postCreationBox {
