--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -3,7 +3,7 @@
     {{#if user}}
         <div id="headerProfileBlock" class='right relative vertAlignItemsMid'>
             <button class="bigBtn bgAccent hoverBgSpecial roundBorder"
-                    onclick="document.getElementById('postCreation').style.display='block'">Создать пост
+                    onclick="showPopup('createPostPopup')">Создать пост
             </button>
             <img src="https://api.adorable.io/avatars/128/{{user.username}}.png"
                  class='roundImg smallAvatar inlineBlock' alt="">
