--- a/views/partials/popups/editReplyPanel.handlebars
+++ b/views/partials/popups/editReplyPanel.handlebars
@@ -1,8 +1,12 @@
-<div id="editReplyPopup" class="popup hidden">
-    <header><h3>Edit post</h3></header>
-    <form id="sendReply" class="popupBody colorMain">
-        <textarea name="replyEdition" id="editReply" required></textarea>
-        <input type="submit" class="borderTop myButton colorDarkLink colorSection" type="image"
-               src="/static/images/send.png">
-    </form>
+
+<div id="editReplyPopup" class="popup hidden bgLight hidden roundBorder shadowed1">
+    <header><h3>Редактировать</h3></header>
+    <div class="popupBody">
+        <form id="sendReply" class="mbItems">
+            <label for="editReply" class="block colorMedium">Ваш ответ</label>
+            <textarea name="replyEdition" id="editReply" class="textInput roundBorder" required></textarea>
+            <input type="submit" value="Сохранить" class="bigBtn roundBorder shadowed1 bgAccent block hoverBgAccent"
+                   src="/static/images/send.png">
+        </form>
+    </div>
 </div>
