create post popup

--- a/views/partials/newPost.handlebars
+++ b/views/partials/newPost.handlebars
@@ -7,8 +7,8 @@
     <form action="" method="post" id="answerForm">
         <textarea placeholder="Создайте свой пост" name="myPost" id="myAnswer" required></textarea>
         <div class="marginButton">
-            <input id="postAnswerButton" class="borderTop myButton colorDarkLink colorSection" type="image"
-                   src="/static/images/send.png">
+            <input class="borderTop myButton colorDarkLink colorSection" st type="image"
+                   src="/static/images/send.png" style="height: 60px;">
         </div>
     </form>
 </div>
