--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -282,7 +282,7 @@ ul.menuList {
 }
 
 .popup {
-    margin: 20% auto;
+    margin: 200px auto;
     width: min-content;
 }
 
@@ -374,10 +374,6 @@ ul.menuList {
 #newPostPopup textarea {
     resize: vertical;
     min-height: 100px;
-}
-
-#postTitleInput {
-    width: 270px;
 }
 
 #loginPopup {
@@ -611,10 +607,6 @@ ul.menuList {
     flex-direction: row;
     width: 90%;
     height: 60%;
-}
-
-#postAnswerButton {
-    height: 60px;
 }
 
 #makeDark {
