--- a/views/partials/popups/createPostPanel.handlebars
+++ b/views/partials/popups/createPostPanel.handlebars
@@ -1,14 +1,18 @@
-<div id="createPostPopup" class="popup hidden">
-    <form class="postCreationBox colorMain" method="post" action="/category/create">
-        <div style="display: flex; flex-direction: column; justify-content: center;">
-            <div class="colorTextLight">Category</div>
-            <input style="margin-top: 5%; font-size: 14pt" type="text" placeholder="Введите категорию" name="category"
+<div id="createPostPopup" class="popup hidden bgLight roundBorder shadowed1">
+    <header>
+        <h3>Новый пост</h3>
+    </header>
+    <div class="popupBody">
+        <form method="post" action="/category/create" class="mbItems">
+            <input type="text" placeholder="Категория" name="category" class="textInput roundBorder"
                    required>
-        </div>
-        <textarea placeholder="Создайте свой пост" name="newPost" id="myAnswer" required></textarea>
-        <div class="marginButton">
-            <input id="postAnswerButton" class="borderTop myButton colorDarkLink colorSection" type="image"
-                   src="/static/images/send.png">
-        </div>
-    </form>
+            <input type="text" class="textInput block roundBorder" placeholder="Заголовок"
+                   required>
+            <textarea name="newPost" id="myAnswer" cols=75 rows="10" placeholder='Текст поста'
+                      class="textInput roundBorder" required></textarea>
+            <div class="formErrorText colorDanger"></div>
+            <input type="submit" value="Создать"
+                   class="bigBtn hoverBgSpecial bgAccent roundBorder">
+        </form>
+    </div>
 </div>
