focus on first input in edit popups

--- a/views/partials/popups/loginPanel.handlebars
+++ b/views/partials/popups/loginPanel.handlebars
@@ -4,7 +4,7 @@
     </header>
     <div class="popupBody ">
         <form method="post" action="/login" class="textCenter mbItems">
-            <input type="text" class="textInput block roundBorder" placeholder="Логин" name="login" required
+            <input type="text" class="textInput block roundBorder" id="loginPopupFocus" placeholder="Логин" name="login" required
                    autofocus>
             <input type="text" class="textInput block roundBorder" placeholder="Пароль" name="psw" required>
             <div id="loginErrorText" class="colorDanger"></div>
