--- a/views/partials/popups/createPostPanel.handlebars
+++ b/views/partials/popups/createPostPanel.handlebars
@@ -4,7 +4,7 @@
     </header>
     <div class="popupBody">
         <form method="post" action="/category/create" class="mbItems">
-            <input type="text" placeholder="Категория" name="category" class="textInput roundBorder"
+            <input type="text" placeholder="Категория" name="category" class="textInput roundBorder" id="createPostPopupFocus"
                    required>
             <input name="newPost" id="myAnswer" type="text" class="textInput block roundBorder" placeholder="Заголовок"
                    required>
