edit reply popup fix

--- a/views/partials/popups/editReplyPanel.handlebars
+++ b/views/partials/popups/editReplyPanel.handlebars
@@ -4,7 +4,7 @@
     <div class="popupBody">
         <form id="sendReply" class="mbItems">
             <label for="editReply" class="block colorMedium">Ваш ответ</label>
-            <textarea name="replyEdition" id="editReply editReplyPopupFocus" class="textInput roundBorder" required></textarea>
+            <textarea name="replyEdition" id="editReply" class="textInput roundBorder" required></textarea>
             <input type="submit" value="Сохранить" class="bigBtn roundBorder shadowed1 bgAccent block hoverBgAccent"
                    src="/static/images/send.png">
         </form>
