removed obsolete id

--- a/views/partials/popups/loginPanel.handlebars
+++ b/views/partials/popups/loginPanel.handlebars
@@ -8,7 +8,7 @@
                    autofocus>
             <input type="text" class="textInput block roundBorder" placeholder="Пароль" name="psw" required>
             <div id="loginErrorText" class="colorDanger"></div>
-            <input type="submit" value="Войти" id=loginBtn" class="bigBtn hoverBgSpecial bgAccent roundBorder">
+            <input type="submit" value="Войти" class="bigBtn hoverBgSpecial bgAccent roundBorder">
         </form>
     </div>
 </div>
