set pwd input type to pwd

--- a/views/partials/popups/loginPanel.handlebars
+++ b/views/partials/popups/loginPanel.handlebars
@@ -6,7 +6,7 @@
         <form method="post" action="/login" class="textCenter mbItems">
             <input type="text" class="textInput block roundBorder" id="loginPopupFocus" placeholder="Логин" name="login" required
                    autofocus>
-            <input type="text" class="textInput block roundBorder" placeholder="Пароль" name="psw" required>
+            <input type="password" class="textInput block roundBorder" placeholder="Пароль" name="psw" required>
             <div id="loginErrorText" class="colorDanger"></div>
             <input type="submit" value="Войти" class="bigBtn hoverBgSpecial bgAccent roundBorder">
         </form>
